Test/typing/should_fail/methods_abstract_native.java
package tutu.titi.toto;

class A {

    abstract native void myMethod(){}

}